Fixed 2 bugs
- Fixed overlap issue by removing position: absolute from .mySlides in style.css
- Fixed image flipping issue by adding a missing ending div tag </div> in index.html

--- a/style.css
+++ b/style.css
@@ -16,9 +16,8 @@
 
 .mySlides {
     display: none;
-    position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 1; /* I removed position: absolute to keep normal document flow */
 }
 
 img {width: 100%;}
